[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asyncio-extensions"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Christian Hartung", email = "6785871+hartungstenio@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/hartungstenio/asyncio-extensions#readme"
Issues = "https://github.com/hartungstenio/asyncio-extensions/issues"
Source = "https://github.com/hartungstenio/asyncio-extensions"

[dependency-groups]
dev = [
  "faker",
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
]


[tool.hatch.version]
path = "src/asyncio_extensions/__about__.py"

[tool.hatch.envs.default]
dependency-groups = ["dev"]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/asyncio_extensions tests}"

[tool.coverage.run]
source_pkgs = ["asyncio_extensions", "tests"]
branch = true
parallel = true
omit = [
  "src/asyncio_extensions/__about__.py",
]

[tool.coverage.paths]
asyncio_extensions = ["src/asyncio_extensions", "*/asyncio-extensions/src/asyncio_extensions"]
tests = ["tests", "*/asyncio-extensions/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
