[project]
name = "asyncio-extensions"
description = "Some (maybe) useful extensions for asyncio"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
  { name = "Christian Hartung", email = "6785871+hartungstenio@users.noreply.github.com" },
]
keywords = ["asyncio", "tasks"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = [
  "typing-extensions; python_version < '3.12'",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/hartungstenio/asyncio-extensions"
Changelog = "https://github.com/hartungstenio/asyncio-extensions/blob/main/CHANGELOG.md"
ReleaseNotes = "https://github.com/hartungstenio/asyncio-extensions/releases"
Documentation = "https://github.com/hartungstenio/asyncio-extensions#readme"
Issues = "https://github.com/hartungstenio/asyncio-extensions/issues"

[dependency-groups]
dev = [
  "faker",
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source_pkgs = ["asyncio_extensions", "tests"]
branch = true
parallel = true
omit = [
  "src/asyncio_extensions/__about__.py",
]

[tool.coverage.paths]
asyncio_extensions = [
  "src/asyncio_extensions",
  "*/asyncio-extensions/src/asyncio_extensions"
]
tests = ["tests", "*/asyncio-extensions/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
dependency-groups = ["dev"]

[tool.hatch.envs.hatch-static-analysis]
config-path = "none"
dependencies = ["ruff==0.14.*"]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
  "faker",
  "pytest-asyncio",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.hatch-test.scripts]
run = "pytest{env:HATCH_TEST_ARGS:} {args}"
run-cov = "coverage run -m pytest{env:HATCH_TEST_ARGS:} {args}"
cov-combine = "coverage combine"
cov-report = "coverage xml"

[tool.pytest]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
  "A",
  "ANN",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM818",
  "D",
  "DJ",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FBT",
  "FLY",
  "FURB",
  "G",
  "I",
  "ICN",
  "INT",
  "ISC",
  "LOG",
  "N",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "T20",
  "TC",
  "TD",
  "TID",
  "TRY",
  "UP",
  "W",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"
